ignore netty license files in rat check

--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ if (file('.git').exists()) {
         '.github/pull_request_template.md',
         'devp2p-eth/src/test/resources/mainnet.json',
         'devp2p-eth/src/test/resources/besu-dev.json',
+        'dist/netty-license/*',
         'eth/src/test/resources/mainnet.json',
         'eth-client/src/main/resources/mainnet.json',
         'eth-client/src/main/resources/default.json',
